--- a/backend/loanshark/money_loans/templates/payment.html
+++ b/backend/loanshark/money_loans/templates/payment.html
@@ -10,8 +10,9 @@
 
     <title>Hello, world!</title>
   </head>
-  <body>
-    <div class="container mt-5">
+  <body style="background-color:#171941;color:white">
+    <div class="container mt-5 ">
+
       <div class="row mt-5">
         <form action="" method="POST" id="payment-form" >
           {% csrf_token %}
@@ -49,13 +50,17 @@
             <div id="card-errors" role="alert"></div>
           </div>
         <div class="text-center">
-          <button type="submit"class="btn btn-outline-primary text-center">Submit Payment </button>
+          <button type="submit"class="btn btn-outline-primary text-center" style="color:white">Submit Payment </button>
         </div>
         </form>
       </div>
     </div>
    
-
+<style>
+  .InputElement{
+    color:white !important;
+  } 
+</style>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
