--- a/backend/loanshark/money_loans/templates/payment.html
+++ b/backend/loanshark/money_loans/templates/payment.html
@@ -15,6 +15,24 @@
 
       <div class="row mt-5">
         <form action="" method="POST" id="payment-form" >
+          <div class="row">
+            <div class="col">
+              {% if messages %}
+              <!-- Start alert Message area -->
+              <div class="alert alert-info" role="alert">
+                <div class="alert">
+                  <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+    
+                  {% for message in messages %}
+                  {{ message }}
+                  {% endfor %}
+                  </div> 
+    
+              </div>
+              {% endif %}
+            </div> 
+
+          </div>
           {% csrf_token %}
           <p>requested amount : {{loan.amount|floatformat}} </p>
 
